force-app/main/default/objects/Branch__c/fields/Branch_Location_City__c.field-meta.xml
<CustomField>
    <fullName>Branch_Location_City__c</fullName>
    <label>Branch Location(City)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adoni</fullName>
            </value>
            <value>
                <fullName>Amaravati</fullName>
            </value>
            <value>
                <fullName>Anantapur</fullName>
            </value>
            <value>
                <fullName>Bhimavaram</fullName>
            </value>
            <value>
                <fullName>Chilakaluripet</fullName>
            </value>
            <value>
                <fullName>Chittoor</fullName>
            </value>
            <value>
                <fullName>Dharmavaram</fullName>
            </value>
            <value>
                <fullName>Eluru</fullName>
            </value>
            <value>
                <fullName>Gudivada</fullName>
            </value>
            <value>
                <fullName>Guntakal</fullName>
            </value>
            <value>
                <fullName>Guntur</fullName>
            </value>
            <value>
                <fullName>Hindupur</fullName>
            </value>
            <value>
                <fullName>Kadapa</fullName>
            </value>
            <value>
                <fullName>Kakinada</fullName>
            </value>
            <value>
                <fullName>Kavali</fullName>
            </value>
            <value>
                <fullName>Kurnool</fullName>
            </value>
            <value>
                <fullName>Machilipatnam</fullName>
            </value>
            <value>
                <fullName>Madanapalle</fullName>
            </value>
            <value>
                <fullName>Nandyal</fullName>
            </value>
            <value>
                <fullName>Narasaraopet</fullName>
            </value>
            <value>
                <fullName>Nellore</fullName>
            </value>
            <value>
                <fullName>Ongole</fullName>
            </value>
            <value>
                <fullName>Proddatur</fullName>
            </value>
            <value>
                <fullName>Rajahmundry</fullName>
            </value>
            <value>
                <fullName>Srikakulam</fullName>
            </value>
            <value>
                <fullName>Tadepalligudem</fullName>
            </value>
            <value>
                <fullName>Tadipatri</fullName>
            </value>
            <value>
                <fullName>Tenali</fullName>
            </value>
            <value>
                <fullName>Tirupati</fullName>
            </value>
            <value>
                <fullName>Vijayawada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>